@@ -1,9 +1,9 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin fileutil::multi::op n 0.5.1]
+[manpage_begin fileutil::multi::op n 0.5.2]
 [moddesc   {file utilities}]
 [titledesc {Multi-file operation, scatter/gather}]
 [require Tcl 8.4]
-[require fileutil::multi::op [opt 0.5.1]]
+[require fileutil::multi::op [opt 0.5.2]]
 [require wip [opt 1.0]]
 [description]
 [keywords {file utilities} copy move remove multi-file]
